--- a/youtube.html
+++ b/youtube.html
@@ -19,10 +19,11 @@
                         <span class="">DiscountsOnServices</span>
                     </a>
                 </div>
+                <!-- <div class="header__content"> -->
                 <nav class="header__navigation">
                     <ul class="header__navigation-list">
                         <li class="header__navigation-list-item header__navigation-list-item--dropdown">
-                            <a class="header__navigation-link" href="">Subscriptions</a>
+                            <a class="header__navigation-link" href="#">Subscriptions</a>
                             <ul class="header__navigation-sub-menu">
                                 <li class="header__navigation-list-item header__navigation-list-item__Netflix">
                                     <a class="header__navigation-link" href="./netflix6m.html">Netflix</a>
@@ -65,10 +66,44 @@
                     </li>
                 </div>
                 <div class="header__login">
-                    <button class="header__login__button">
+                    <div class="header__login__button-container"><a href="#" class="header__login__button">
                         Log in
+                    </a>
+                    </div>
+                </div>
+                <div class="header__mobile-button">
+                    <button class="header_humburger">
+                        <img src="./images/bars.svg" alt="">
                     </button>
                 </div>
+            <!-- </div> -->
+           
+            </div>
+            <div class="header__mobile">
+                <ul class="header__mobile-list">
+                    <li><img src="./images/header-mobile/Home.svg" alt=""><a href="./index.html">Home</a></li>
+                    <li><img src="./images/header-mobile/dashboard-fill 1.svg" alt=""><a href="#">About</a></li>
+                    <li><img src="./images/header-mobile/Frame.svg" alt=""><a href="./faq.html">FAQ</a></li>
+                    <li><img src="./images/header-mobile/Frame (1).svg" alt=""><a href="#">Support</a></li>
+                </ul>
+                <ul class="header__mobile-serv">
+                    <li><a href="./netflix6m.html">Netflix</a></li>
+                    <li><a href="./youtube.html">YouTube</a></li>
+                    <li><a href="./spotify.html">Spotify</a></li>
+                </ul>
+                <div class="header__mobile-btns">
+                    <div class="mobile__container"><a class="header__menu-login" href="#">Log in</a></div>
+                    <div class="mobile__container"><a class="header__menu-sign" href="#">Sign up</a></div>
+                </div>
+            <div class="header__mobile-footer">
+                <div class="header__mobile-socials">
+                    <a href="#"><img src="./images/WatsApp.svg" alt=""></a>
+                    <a href=""><img src="./images/Telegram.svg" alt=""></a>
+                </div>
+                <div class="header__mobile-language">
+                    <a href="#">EN</a>
+                </div>
+            </div>
             </div>
         </header>
 
